data/derived/fa15/progs/unify/prog3312.ml.out
Characters 101-125:
  in if len1 > len2 then (l1,clone 0 (len1-len2)) @ l2 else (clone 0 (len2-len1) @ l1,l2);;
                         ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
